tests/error_messages/error_messages.exp
Error --------------------------------------------------------------------------------------------------- errors.js:1:12

Cannot resolve name `define`. [cannot-resolve-name]

   1| if (typeof define === 'function' && define.amd) { }
                 ^^^^^^


Error --------------------------------------------------------------------------------------------------- errors.js:1:37

Cannot resolve name `define`. [cannot-resolve-name]

   1| if (typeof define === 'function' && define.amd) { }
                                          ^^^^^^



Found 2 errors
